compile with Intel LLVM (OneAPI) compiler and SVML

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,8 +22,18 @@ else()
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -msse3 -O2")
 endif()
 if ("${CMAKE_C_COMPILER_ID}" STREQUAL "Intel")
+  set(HAVE_FLOAT128 1 CACHE INTERNAL "Have __float128")
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Qoption,cpp,--extended_float_types")
+  message("Building with -Qoption,cpp,--extended_float_types")
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -unroll-aggressive -ipo ")
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-math-errno")
+elseif ("${CMAKE_C_COMPILER_ID}" STREQUAL "IntelLLVM")
+  set(HAVE_FLOAT128 1 CACHE INTERNAL "Have __float128")
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Qoption,cpp,--extended_float_types")
+  message("Building with -Qoption,cpp,--extended_float_types")
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -funroll-loops -ipo -xhost -O3")
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-math-errno  -fimf-use-svml=true -static-intel")
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fuse-ld=lld")
 else()
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -funroll-loops -ftree-vectorize -ffast-math")
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-math-errno")
@@ -37,6 +47,7 @@ list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 find_package(QUADMATH)
 if(QUADMATH_FOUND)
   set(HAVE_QUADMATH_H 1 CACHE INTERNAL "Have QUADMATH")
+  set(HAVE_FLOAT128_QC 1 CACHE INTERNAL "Have __float128")
 endif()
 
 if(${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} VERSION_GREATER 3.12)
