Intel LLVM changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required (VERSION 3.5)
+cmake_minimum_required (VERSION 3.20)
 project (qcint C)
 set(qcint_VERSION_MAJOR "6")
 set(qcint_VERSION_MINOR "1")
@@ -9,18 +9,23 @@ set(cint_SOVERSION "${qcint_VERSION_MAJOR}")
 
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O2 -DNDEBUG")
 if ("${CMAKE_BUILD_TYPE}" STREQUAL "")
-  set(CMAKE_BUILD_TYPE RELWITHDEBINFO)
+	#  set(CMAKE_BUILD_TYPE RELWITHDEBINFO)
 endif()
 set(CMAKE_VERBOSE_MAKEFILE OFF)
-option(BUILD_MARCH_NATIVE "gcc flag -march=native" on)
+option(BUILD_MARCH_NATIVE "gcc flag -march=native" off)
 if(BUILD_MARCH_NATIVE)
   message("Build with -march=native")
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -march=native -O2")
-else()
-  # This appears to be the lowest version that compiles
-  message("Build with -march=sse3")
-  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -msse3 -O2")
 endif()
+
+include(CheckIPOSupported)
+check_ipo_supported(RESULT supported OUTPUT error)
+if( supported )
+set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
+message(STATUS "IPO / LTO enabled")
+endif()
+
+
 if ("${CMAKE_C_COMPILER_ID}" STREQUAL "Intel")
   set(HAVE_FLOAT128 1 CACHE INTERNAL "Have __float128")
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Qoption,cpp,--extended_float_types")
@@ -31,14 +36,12 @@ elseif ("${CMAKE_C_COMPILER_ID}" STREQUAL "IntelLLVM")
   set(HAVE_FLOAT128 1 CACHE INTERNAL "Have __float128")
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Qoption,cpp,--extended_float_types")
   message("Building with -Qoption,cpp,--extended_float_types")
-  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -funroll-loops -ipo -xhost -O3")
-  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-math-errno  -fimf-use-svml=true -static-intel")
-  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fuse-ld=lld")
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -funroll-loops -ipo -xCASCADELAKE -O3 -ftree-vectorize")
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-math-errno  -fimf-use-svml=true -static-intel -flto=auto")
 else()
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -funroll-loops -ftree-vectorize -ffast-math")
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-math-errno")
 endif()
-
 cmake_policy(SET CMP0042 NEW)
 include(GNUInstallDirs)
 #set(CMAKE_INCLUDE_CURRENT_DIR ON)
@@ -91,7 +94,7 @@ set(cintSrc
   src/autocode/intor2.c src/autocode/intor3.c src/autocode/intor4.c
   src/autocode/int1e_grids1.c)
 
-#option(WITH_RANGE_COULOMB "Range separated Coulomb" on)
+option(WITH_RANGE_COULOMB "Range separated Coulomb" on)
 if(WITH_RANGE_COULOMB)
 # defined in config.h
 #  add_definitions(-DWITH_RANGE_COULOMB)
@@ -104,10 +107,13 @@ if(WITH_POLYNOMIAL_FIT)
   message("Enabled WITH_POLYNOMIAL_FIT")
 endif(WITH_POLYNOMIAL_FIT)
 
+
+option(WITH_COULOMB_ERF "Coulomb ERF" on)
 if(WITH_COULOMB_ERF)
   message("WITH_COULOMB_ERF is deprecated since v6.0")
 endif(WITH_COULOMB_ERF)
 
+option(WITH_F12 "F12 option" on)
 if(WITH_F12)
   set(cintSrc ${cintSrc} src/g2e_f12.c src/stg_roots.c src/cint2e_f12.c)
   add_definitions(-DWITH_F12)
