try to add ARM support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,9 @@ set(qcint_VERSION_TWEAK "0")
 set(qcint_VERSION "${qcint_VERSION_MAJOR}.${qcint_VERSION_MINOR}.${qcint_VERSION_PATCH}")
 set(cint_SOVERSION "${qcint_VERSION_MAJOR}")
 
+set(QCINT_VECTOR_TYPE "SSE3" CACHE STRING "qcint vector type")
+set(QCINT_V_${QCINT_VECTOR_TYPE} ON)
+
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O2 -DNDEBUG")
 if ("${CMAKE_BUILD_TYPE}" STREQUAL "")
   set(CMAKE_BUILD_TYPE RELWITHDEBINFO)
