--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,23 +54,33 @@ check_function_exists(sqrtl HAVE_SQRTL)
 
 include(CheckNativeVectorization)
 check_native_vectorization()
-message("sse3 works: ${SSE3_WORKS}")
-message("avx works: ${AVX_WORKS}")
-message("avx512f works: ${AVX512F_WORKS}")
-if(AVX512F_WORKS)
+message("sse3 check: ${QCINT_HAS_SSE3}")
+message("avx check: ${QCINT_HAS_AVX}")
+message("avx2 check: ${QCINT_HAS_AVX2}")
+message("fma check: ${QCINT_HAS_FMA}")
+message("avx512f check: ${QCINT_HAS_AVX512F}")
+if(QCINT_HAS_AVX512F)
   set(QCINT_VECTOR_LEVEL "avx512f")
   set(QCINT_SIMDD 8)
-elseif(AVX_WORKS)
+elseif(QCINT_HAS_AVX2)
+  set(QCINT_VECTOR_LEVEL "avx2")
+  set(QCINT_SIMDD 4)
+elseif(QCINT_HAS_AVX)
   set(QCINT_VECTOR_LEVEL "avx")
   set(QCINT_SIMDD 4)
-elseif(SSE3_WORKS)
+elseif(QCINT_HAS_SSE3)
   set(QCINT_VECTOR_LEVEL "sse3")
   set(QCINT_SIMDD 2)
 else()
   message(FATAL_ERROR "SSE3 is the minimum supported instruction set")
 endif()
 
-message("Will compile with vectorization width: ${QCINT_VECTOR_LEVEL}, SIMDD=${QCINT_SIMDD}")
+message("Will compile with vectorization level: ${QCINT_VECTOR_LEVEL}, SIMDD=${QCINT_SIMDD}")
+if(QCINT_HAS_FMA)
+  message("Using FMA instructions")
+else()
+  message("Not using FMA instructions")
+endif()
 
 configure_file(
   "${PROJECT_SOURCE_DIR}/src/cint_config.h.in"
